--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 <fieldset>
 <label for="nameField">Input</label>
 <input type="text" v-model="input">
-<button type="button" class="button" @click="getResult">แสดงผลลัพท์</button>
+<button type="button" class="button" @click="getResult">Show Result</button>
 </fieldset>
 </form>
 </div>
